fixed pre-intro spacing

--- a/css/style.css
+++ b/css/style.css
@@ -86,9 +86,9 @@ header nav {
 	}
 
 	#pre-intro h2 {
-		margin-top: 350px;
+		margin-top: 340px;
 		font-size: 75px;
-		margin-bottom: 5px;
+		margin-bottom: 0px;
 		font-weight: normal;
 	}
 
